<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:textSize="32sp"
        android:textStyle="normal|bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/ButtonSpeed"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btnspeedometer"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/ButtonHelp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btnhelp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/ButtonAbout"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btnabout"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>



    <TextView
        android:text=""
        android:id="@+id/txtHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
</LinearLayout>
